k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance
  namespace: finance
spec:
  selector:
    app: finance
  ports:
    - port: 80
      targetPort: 3000
