k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-app
  namespace: dev-software
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-ingress-class: traefik
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - finance.viendev.xyz
      secretName: finance-tls
  rules:
    - host: finance.viendev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance
                port:
                  number: 80
